# FlipBinding.CSharp

./: .editorconfig  .gitignore  CLAUDE.md  FlipBinding.CSharp.sln  LICENSE.txt  README.md  THIRD-PARTY-NOTICES.txt
.github/: dependabot.yml
.github/workflows/: build.yml
Docs/: sample_ja.md
FlipBinding.CSharp/: Flip.cs  FlipBinding.CSharp.csproj  FlipNative.cs  FlipResult.cs  Tonemapper.cs
FlipBinding.CSharp.Tests/: FlipBinding.CSharp.Tests.csproj  FlipResultTest.cs  FlipTest.cs  TestImageLoader.cs
documentation/: codesign_ja.md  flip_ja.md  pinvoke_ja.md  publish_ja.md
flip-native/: CMakeLists.txt  flip_capi.cpp  flip_capi.h
